2001-05-15  Peter Stephenson  <pws@csr.com>

	* 14348: Src/builtin.c: some idiot forgot to make GLOBAL_EXPORT
	work with typeset -g.

2001-05-15  Sven Wischnowsky  <wischnow@zsh.org>

	* 14346: Src/parse.c: calculate the length of the region to map
	(for mapped zwc files) correctly, including the
	offset-page-boundary-adjustment

2001-05-15  Clint Adams  <clint@zsh.org>

	* 14341: Completion/Unix/Command/.distfiles,
	Completion/Unix/Command/_modutils:
	complete loaded Linux kernel modules for
	rmmod or modprobe -r.

2001-05-14  Peter Stephenson  <pws@csr.com>

	* 14330: Completion/Base/Widget/_most_recent_file: handle filenames
	which need quoted characters better.

2001-05-14  Sven Wischnowsky  <wischnow@zsh.org>

	* 14327: Src/exec.c: set list_pipe_job only for real pipelines

2001-05-11  Peter Stephenson  <pws@csr.com>

	* 14314: Src/Modules/stat.c: writing const variable under cygwin.

	* 14313: Test/E01options.ztst, Test/ztst.zsh: new options tests.

2001-05-10  Wayne Davison  <wayned@users.sourceforge.net>

	* 14304: Src/hist.c: Fixed an obscure local-history bug that could
	make the "history" command output something that was slightly wrong.

2001-05-10  Andrej Borsenkow <bor@zsh.org>

	* users/3872: Src/Modules/zftp.c: rename inet_* to avoid clash
	with Solaris 7 headers.

2001-05-10  Tanaka Akira  <akr@zsh.org>

	* 14295: Completion/Unix/Command/_cvs: support new cvs subcommands
	`rannotate' and `rlog' introduced by cvs-1.11.1.

2001-05-10  Sven Wischnowsky  <wischnow@zsh.org>

	* 14293: Src/Zle/computil.c: barf if a empty string is given as
	one of the separators for _values

2001-05-09  Bart Schaefer  <schaefer@zsh.org>

	* unposted: configure.in: Clean up 14275+14290 a bit at Andrej's
	urging so as not to violate quite so many autoconf usage rules.

	* 14290: configure.in: Use a different cache variable for the
	Solaris-curses.h-mistake-fix from 14275.

2001-05-09  Oliver Kiddle  <opk@zsh.org>
